[package]
name = "ferisu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Mahor1221 <mahor1221@pm.me>"]
description = """
"""

#readme = "README.md"
#documentation = "https://docs.rs/${name}"
#homepage = "https://github.com/mahor1221/${name}"
#repository = "https://github.com/mahor1221/${name}.git"
#keywords = []
#categories = []

# Add cssparser and selectors to handle scraper errors
# 0.27.2 and 0.22.0 are the versions used by scrapper
# See issue: https://github.com/causal-agent/scraper/issues/60
#cssparser = "0.27.2"
#selectors = "0.22.0"

# The API of once_cell is being proposed for inclusion in std
#https://github.com/rust-lang/rust/issues/74465
[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"] }
scraper = "0.13.0"
reqwest = "0.11.10"
clap = { version = "3.2.17", features = ["derive"] }
once_cell = "1.14.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
#opt-level = "s"
