[package]
name = "ferisu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Mahor1221 <mahor1221@pm.me>"]
description = """
"""

#readme = "README.md"
#documentation = "https://docs.rs/${name}"
#homepage = "https://github.com/mahor1221/${name}"
#repository = "https://github.com/mahor1221/${name}.git"
#keywords = []
#categories = []

[dependencies]
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "rt"] }
scraper = "0.13"
reqwest = "0.11"
clap = { version = "3.2", features = ["derive"] }
# The API of once_cell is being proposed for inclusion in std
#https://github.com/rust-lang/rust/issues/74465
once_cell = "1.14"
# Add cssparser and selectors to handle scraper errors
# See issue: https://github.com/causal-agent/scraper/issues/60
# 0.27.2 and 0.22.0 are the versions used by scrapper
selectors = "0.22.0"
cssparser = "0.27.2"

[profile.release]
codegen-units = 1
lto = true
strip = true
#opt-level = "s"
